; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_OneTrivialLab.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_OneTrivialLab.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TYPE_Lab_DBL = common dso_local global i32 0, align 4
@INTENT_RELATIVE_COLORIMETRIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*)* @OneTrivialLab to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @OneTrivialLab(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = call i32 @SubTest(i8* %9)
  %11 = call i32 (...) @DbgThread()
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @TYPE_Lab_DBL, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @TYPE_Lab_DBL, align 4
  %16 = load i32, i32* @INTENT_RELATIVE_COLORIMETRIC, align 4
  %17 = call i32 @cmsCreateTransform(i32 %11, i32 %12, i32 %13, i32 %14, i32 %15, i32 %16, i32 0)
  store i32 %17, i32* %7, align 4
  %18 = call i32 (...) @DbgThread()
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @cmsCloseProfile(i32 %18, i32 %19)
  %21 = call i32 (...) @DbgThread()
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @cmsCloseProfile(i32 %21, i32 %22)
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @CheckSeveralLab(i32 %24)
  store i32 %25, i32* %8, align 4
  %26 = call i32 (...) @DbgThread()
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @cmsDeleteTransform(i32 %26, i32 %27)
  %29 = load i32, i32* %8, align 4
  ret i32 %29
}

declare dso_local i32 @SubTest(i8*) #1

declare dso_local i32 @cmsCreateTransform(i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @DbgThread(...) #1

declare dso_local i32 @cmsCloseProfile(i32, i32) #1

declare dso_local i32 @CheckSeveralLab(i32) #1

declare dso_local i32 @cmsDeleteTransform(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
